--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,52 @@
 h1 {
     background-color: red;
 }
+
+
+
+
+.paddingX {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  
+  .paddingY {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+  
+  .padding {
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 16px;
+    padding-bottom: 10px;
+  }
+  
+  .heroHeadText {
+    font-weight: 900;
+    color: white;
+    font-size: 80px;
+    line-height: 98px;
+    margin-top: 2px;
+  }
+  
+  .heroSubText {
+    color: #dfd9ff;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 40px;
+  }
+  
+  .sectionHeadText {
+    color: white;
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 40px;
+  }
+  
+  .sectionSubText {
+    font-size: 18px;
+    color: red; 
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+  }
